--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
+  "name": "twitter-banner-time",
+  "scripts": {
+    "start": "vc dev"
+  },
   "dependencies": {
     "node-fetch": "^2.6.1",
     "twitter-api-client": "^1.3.8"
   },
-  "name": "twitter-banner-time",
-  "version": "1.0.0",
+  "version": "dev",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "vercel": "^22.0.1"
+  }
 }
