--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "start": "vc dev"
   },
   "dependencies": {
+    "date-fns": "^2.21.1",
     "node-fetch": "^2.6.1",
     "twitter-api-client": "^1.3.8"
   },
