Add secret token to prevent unauthorized request to trigger twitter api call

--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,6 @@ TWITTER_ACCESS_TOKEN=some-token
 TWITTER_ACCESS_TOKEN_SECRET=some-secret
 
 OPENWEATHER_API=some-key
+
+# Arbitrary token to authorize update request
+SECRET_TOKEN=some-token
