--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {
     "date-fns": "^2.21.1",
+    "dedent": "^0.7.0",
     "node-fetch": "^2.6.1",
     "twitter-api-client": "^1.3.8"
   },
